--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <label for="width">Width</label>
                     <input type="text" name="width">
                     <br>
-                    <button>Go !</button>
+                    <button id="go-button">Go !</button>
                 </fieldset>
                 <fieldset>
                     <legend>Computation</legend>
