--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandelbrot explorer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js" type="application/javascript"></script>
+    <script src="src/drawingWorker.js" type="javascript/worker"></script>
+    <script src="src/utils.js" type="application/javascript"></script>
+    <script src="src/main.js" type="application/javascript"></script>
 </head>
 <body onload="main()">
     <header>
