computation in workers

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandelbrot explorer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="src/drawingWorker.js" type="javascript/worker"></script>
     <script src="src/utils.js" type="application/javascript"></script>
     <script src="src/colors.js" type="application/javascript"></script>
+    <script src="src/mandelbrot.js" type="application/javascript"></script>
+    <script src="src/drawingWorker.js" type="javascript/worker"></script>
     <script src="src/consts.js" type="application/javascript"></script>
     <script src="src/main.js" type="application/javascript"></script>
 </head>
